--- a/Monogame/Velentr.States.Monogame.DevEnv/Velentr.States.Monogame.DevEnv.csproj
+++ b/Monogame/Velentr.States.Monogame.DevEnv/Velentr.States.Monogame.DevEnv.csproj
@@ -8,14 +8,20 @@
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
+    <StartupObject>CoreDev.Program</StartupObject>
+    <Version>1.0.0</Version>
+    <FileVersion>1.0.0</FileVersion>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>$(DefineConstants)TRACE;MONOGAME</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>$(DefineConstants)TRACE;MONOGAME</DefineConstants>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Icon.ico" />
     <None Remove="Icon.bmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="..\Velentr.States.Monogame.DevEnv.DevEnv\Game1.cs" Link="Game1.cs" />
-    <Compile Include="..\Velentr.States.Monogame.DevEnv.DevEnv\Program.cs" Link="Program.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
@@ -30,5 +36,13 @@
   <ItemGroup>
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    <PackageReference Include="SharpFont.NetStandard" Version="1.0.5" />
+    <PackageReference Include="System.Diagnostics.PerformanceCounter" Version="6.0.1" />
+    <PackageReference Include="Velentr.Font.Monogame" Version="1.2.8" />
+    <PackageReference Include="Velentr.Miscellaneous" Version="1.2.2" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Velentr.States.Monogame\Velentr.States.Monogame.csproj" />
+  </ItemGroup>
+  <Import Project="..\..\CoreDev\CoreDev.projitems" Label="Shared" />
 </Project>
