--- a/Monogame/Velentr.States.Monogame/Velentr.States.Monogame.csproj
+++ b/Monogame/Velentr.States.Monogame/Velentr.States.Monogame.csproj
@@ -7,16 +7,16 @@
     <Company>Christian Webber</Company>
     <RepositoryUrl>https://github.com/vonderborch/Velentr.States</RepositoryUrl>
     <PackageTags>Monogame, </PackageTags>
-    <Description>A library to </Description>
+    <Description>A library to make managing states in a game or an app easier.</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <PackageProjectUrl>https://github.com/vonderborch/Velentr.States</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <BaseOutputPath>..\..\release\monogame\</BaseOutputPath>
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <FileVersion>1.0.0</FileVersion>
-    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.1</FileVersion>
+    <AssemblyVersion>1.0.1</AssemblyVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>TRACE;MONOGAME</DefineConstants>
